<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            
			<TextView
        	    android:text="@string/enter_ssid"
            	android:layout_column="0"
            	android:padding="3dip" />            

        	<EditText
                android:id="@+id/editSsid"
                android:layout_column="1"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

			<TextView
        	    android:text="@string/enter_max_altitude"
            	android:layout_column="0"
            	android:padding="3dip" />            

        	<EditText
                android:id="@+id/editMaxAltitude"
                android:layout_column="1"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number|numberDecimal" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

			<TextView
        	    android:text="@string/enter_max_vertical_speed"
            	android:layout_column="0"
            	android:padding="3dip" />            

        	<EditText
                android:id="@+id/editMaxVerticalSpeed"
                android:layout_column="1"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number|numberDecimal" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

			<TextView
        	    android:text="@string/enter_max_yaw"
            	android:layout_column="0"
            	android:padding="3dip" />            

        	<EditText
                android:id="@+id/editMaxYaw"
                android:layout_column="1"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number|numberDecimal" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

			<TextView
        	    android:text="@string/enter_max_tilt"
            	android:layout_column="0"
            	android:padding="3dip" />            

        	<EditText
                android:id="@+id/editMaxTilt"
                android:layout_column="1"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number|numberDecimal" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

			<Button
        	    android:text="@string/flat_trim"
            	android:layout_column="1"
            	android:padding="13dip" />            

        </TableRow>

        <TableRow
            android:id="@+id/tableRow7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

			<TextView
        	    android:text="@string/select_hull"
            	android:layout_column="0"
            	android:padding="3dip" />            

            <Spinner
                android:id="@+id/spinnerHullType"
				android:spinnerMode="dropdown"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

			<TextView
        	    android:text="@string/select_flight_location"
            	android:layout_column="0"
            	android:padding="3dip" />            

            <Spinner
                android:id="@+id/spinnerFlightLocation"
				android:spinnerMode="dropdown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </TableRow>
    </TableLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok" />

</LinearLayout>